--- a/style.css
+++ b/style.css
@@ -153,6 +153,18 @@ main {
     transform: translateX(150px);
 }
 
+.gallery-item { 
+  opacity: 0;
+  transform: translateY(50px); 
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; 
+}
+
+.gallery-item.show { 
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 .footer-bio {
     display: flex;
     justify-content: space-between;
