--- a/style.css
+++ b/style.css
@@ -1,31 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
-    margin: auto;
+    margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 nav {
-    text-align: center;
-    padding: 30px;
     background-color: #021526;
-    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    bottom: 0;
 }
 
-nav a {
-    color: white;
+.logo, .navbar {
+    margin: 0px 100px;
+}
+
+.logo a {
     text-decoration: none;
-    padding: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
+    color: white;
 }
 
-nav a:hover {
-    background-color: white;
-    color: black;
-    border: none;
-    outline: none;
-    border-radius: 3px;
+.navbar ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar ul li {
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: #e1e7ff;
+    padding: 2.5vh 20px;
+}
+
+.navbar ul li a:hover {
+    background-color: #ffffff;
+    color: #021526;
     transition: .5s ease-in-out;
 }
 
@@ -43,19 +64,18 @@ header {
     background-size: cover;
     background-position: bottom;
     color: white;
-    height: 700px;
+    height: 92vh;
     background-color: rgba(0, 0, 0, 0.7);
     background-blend-mode: darken;
-    
 }
 
 header h1 {
-    font-size: 70px;
+    font-size: 4rem;
     color: white;
 }
 
 h1 {
-    color: #065497;
+    color: white;
     
 }
 
@@ -67,15 +87,35 @@ h1 {
 }
 
 .header-main h1 {
-    margin-bottom: 20px;
-    letter-spacing: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 5px;
+    font-size: 4rem;
 }
 
 .header-main p {
-    letter-spacing: 7px;
-    margin-top: 15px;
+    letter-spacing: 5px;
+    margin-top: 20px;
+    margin-bottom: 40px;
     font-style: italic;
-    font-weight: bold;
+}
+
+.header-main a {
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px 30px;
+    transition: 0.5s;
+}
+
+.header-main a:hover {
+    -webkit-box-shadow:0px 0px 62px 0px rgba(255,255,255,0.8);
+-moz-box-shadow: 0px 0px 62px 0px rgba(255,255,255,0.8);
+box-shadow: 0px 0px 62px 0px rgba(255,255,255,0.8);
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+    transition: 0.5s;
 }
 
 .header-description {
@@ -86,6 +126,7 @@ h1 {
     margin: 20px;
     line-height: 30px;
     letter-spacing: 2px;
+    color: white;
 }
 
 .header-hr {
@@ -105,12 +146,28 @@ main {
 
 .main-gallery {
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.gallery-1 img:hover, .gallery-2 img:hover, .gallery-3 img:hover {
+    -webkit-box-shadow:0px 0px 129px 0px rgba(255,255,255,0.8);
+-moz-box-shadow: 0px 0px 129px 0px rgba(255,255,255,0.8);
+box-shadow: 0px 0px 129px 0px rgba(255,255,255,0.8);
+    transition: 0.5s;
+    transform: scale(1.05);
+}
+
+div img {
+    transition: 0.5s;
+    margin: 10px 0px;
 }
 
 .main-gallery button {
     margin-top: 10px;
-    width: 450px;
+    width: 30%;
     background-color: white;
     color: #021526;
     border: 1px solid rgb(53, 53, 53);
@@ -120,9 +177,9 @@ main {
 }
 
 .main-gallery button:hover {
-    background-color: #021526;
+    background-color: transparent;
     border: 1px solid white;
-    width: 96%;
+    width: 100%;
     cursor: pointer;
     color: white;
     transition: 1s;
@@ -142,15 +199,16 @@ main {
 }
 
 .gallery-container .gallery-1{
-    transform: translateX(-300px);
+    transform: translateX(-150px);
+    
 }
 
 .gallery-container .gallery-2{
-    transform: translateX(-150px);
+    transform: translateX(150px);
 }
 
 .gallery-container .gallery-3{
-    transform: translateX(150px);
+    transform: translateX(-150px);
 }
 
 .gallery-item { 
@@ -164,19 +222,44 @@ main {
   transform: translateY(0);
 }
 
-
 .footer-bio {
-    display: flex;
-    justify-content: space-between;
+    text-align: left;
     background-color: #021526;
     color: white;
-    padding: 30px;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between
+}
+
+.footer-bio h3 {
+    font-size: 1.5rem;
+}
+
+.footer-about p {
+    margin-bottom: 10px;
+}
+
+.footer-about a {
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+    font-size: 0.8rem;
+    padding: 5px 20px;
+    transition: 0.5s;
+}
+
+.footer-about a:hover {
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
 }
 
 .footer-copyright {
     color: white;
     background-color: #021526;
-    padding: 10px;
+    padding: 20px 0px;
     width: 100%;
     text-align: center;
 }
