--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1 {
     font-size: 0.9rem;
     letter-spacing: 0.5px;
     margin-top: 15px;
-    width: 40%;
+    width: 30%;
     background-color: white;
     color: #021526;
     border: 1px solid rgb(53, 53, 53);
@@ -368,6 +368,7 @@ main {
     .logo, .navbar {
         margin: 0 10px;
         padding: 0;
+        font-size: 12px;
     }
 
     .logo {
@@ -375,21 +376,55 @@ main {
     }
 
     .navbar ul li a {
-        font-size: 15px;
-        padding: 0 15px;
+        font-size: 13px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .animation-arrow-down {
-        left: 49%;
+        align-items: center;
+    }
+
+    .header-description {
+        padding: 0;
+        padding-top: 120px;
+        padding-bottom: 50px;
+        margin: 0;
+    }
+
+    .header-description a {
+        width: 50%;
+    }
+
+    .main-gallery {
+        margin: 0;
+        padding: 0;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+    }
+
+    .main-gallery a {
+        width: 50%;
+    }
+    .header-description a:hover {
+        width: 90%;
+    }
+
+    .main-gallery a:hover {
+        width: 80%;
     }
 
     .gallery-container {
         display: flex;
         flex-direction: column;
+        padding: 0;
+        margin: 0;
     }
 
     .gallery-1 img, .gallery-2 img, .gallery-3 img {
-        width: 440px;
+        width: 90%;
+        height: 90%;
     }
 
     .gallery-container .gallery-1 {
@@ -413,30 +448,22 @@ main {
         opacity: 1;
         transform: translateY(0);
     }
-    
-    .main-gallery a:hover {
-        width: 105%;
-    }
-
-    .header-description a:hover {
-        width: 90%;
-    }
 
     .footer-bio {
-        padding: 20px;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .footer-contact {
-        width: 200px;
+        width: 150px;
         font-size: 12px;
         padding: 2px;
     }
     
     .footer-about {
         font-size: 12px;
-        width: 200px;
+        width: 170px;
         padding: 2px;
         padding-bottom: 5px;
     }
