--- a/contact/style.css
+++ b/contact/style.css
@@ -6,7 +6,6 @@
     overflow-x: hidden;
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
-    color: white;
 }
 
 *::-webkit-scrollbar {
@@ -14,13 +13,14 @@
 }
 
 nav {
-    background-color: #021526;
+    background-color: transparent;
+    backdrop-filter: blur(5px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 1000;
     width: 100vw;
+    transition: top 0.6s;
 }
 
 .logo, .navbar {
@@ -30,7 +30,8 @@ nav {
 
 .logo a {
     text-decoration: none;
-    color: white;
+    color: black;
+    font-size: 17px;
 }
 
 .navbar ul {
@@ -40,7 +41,6 @@ nav {
 }
 
 .navbar ul li {
-    height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -48,29 +48,29 @@ nav {
 
 .navbar ul li a {
     text-decoration: none;
-    color: #e1e7ff;
+    color: white;
     width: 7rem;
-    padding: 8vh 0;
+    padding: 3vh 0;
     text-align: center;
     transition: all .5s ease;
 }
 
 .navbar ul li a:hover {
     background-color: #ffffff;
-    color: #021526;
+    color: black;
     transition: all .5s ease;
 }
 
 #contact {
     background-color: #ffffff;
-    color: #021526;
+    color: black;
 }
 
 .toggleSidebar {
     display: none;
-    padding: 5px 5px;
+    padding: 0 5px;
     font-size: 24px;
-    background-color: #021526;
+    background-color: transparent;
     color: white;
     border: none;
     cursor: pointer;
@@ -89,8 +89,8 @@ nav {
     left: -150px;
     background-color: #021526;
     transition: left 0.3s ease;
-    z-index: 10;
     overflow: hidden;
+    z-index: 10;
 }
 
 .sidebar-header {
@@ -138,14 +138,20 @@ nav {
     cursor: pointer;
 }
 
+.main-header {
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 header {
     color: white;
-    padding-top: 200px;
-    padding-bottom: 150px;
-    background-color: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: #000f1a;
+    background-image: url(images/header.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 header h1 {
@@ -155,6 +161,13 @@ header h1 {
 
 h1 {
     color: white;
+    
+}
+
+.header-main {
+    width: 90%;
+    padding: 50px 0;
+    text-align: center;
 }
 
 main {
@@ -177,7 +190,7 @@ main {
 
 .footer-contact, .footer-about {
     padding: 10px;
-    line-height: 1.5;
+    line-height: 1.7;
     width: 450px;
 }
 
@@ -188,7 +201,6 @@ main {
 .footer-contact ul li {
     list-style-type: none;
 }
-
 
 .footer-about p {
     margin-bottom: 10px;
@@ -250,6 +262,11 @@ main {
         left: 0;
     }
 
+    .header-main h1 {
+        font-size: 3rem;
+        color: white;
+    }
+
     .footer-bio {
         padding: 15px;
         padding-left: 10px;
@@ -258,12 +275,12 @@ main {
 
     .footer-contact {
         width: 150px;
-        font-size: 12px;
+        font-size: 10px;
         padding: 2px;
     }
     
     .footer-about {
-        font-size: 12px;
+        font-size: 10px;
         width: 170px;
         padding: 2px;
         padding-bottom: 5px;
