--- a/about/style.css
+++ b/about/style.css
@@ -170,6 +170,11 @@ h1 {
     text-align: center;
 }
 
+main .contact12{
+    display: grid;
+    border: #ffffff;
+}
+
 main {
     background-color: rgb(0, 0, 0);
     padding: 100px;
