--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ h1 {
 }
 
 main {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(33, 33, 33);
     text-align: center;
     padding: 15px;
 }
@@ -310,6 +310,7 @@ figcaption {
     padding: 30px 100px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgba(255, 255, 255, 0.422);
 }
 
 .footer-bio h3 {
