big update (nav, bg, content, footer, bug fix, and more)

--- a/about/style.css
+++ b/about/style.css
@@ -21,6 +21,8 @@ nav {
     position: fixed;
     width: 100vw;
     transition: top 0.6s;
+    border-bottom: 1px solid rgba(208, 208, 208, 0.196);
+    z-index: 10;
 }
 
 .logo, .navbar {
@@ -61,7 +63,7 @@ nav {
     transition: all .5s ease;
 }
 
-#about {
+#about, #about-side {
     background-color: #ffffff;
     color: black;
 }
@@ -91,6 +93,7 @@ nav {
     transition: left 0.3s ease;
     overflow: hidden;
     z-index: 10;
+    border-right: 1px solid rgba(255, 255, 255, 0.359);
 }
 
 .sidebar-header {
@@ -150,7 +153,7 @@ header {
     color: white;
     background-color: #000f1a;
     background-image: url(../images/header.jpg);
-    background-size: cover;
+    background-size: 100vw 110%;
     background-position: center;
 }
 
@@ -170,23 +173,34 @@ h1 {
     text-align: center;
 }
 
-main .contact12{
-    display: grid;
-    border: #ffffff;
+main {
+    background-color: #212121;
+    padding: 100px;
+    color: white;
 }
 
-main {
-    background-color: rgb(0, 0, 0);
-    padding: 100px;
+.about {
+    display: flex;
+    justify-content: center;
+}
+
+.about1, .about2, .about3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    width: 25%;
 }
 
 .footer-bio {
     text-align: left;
-    background-color: #021526;
+    background-color: #111;
     color: white;
     padding: 30px 100px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgba(255, 255, 255, 0.249);
 }
 
 .footer-bio h3 {
@@ -230,13 +244,19 @@ main {
 
 .footer-copyright {
     color: white;
-    background-color: #021526;
+    background-color: #0a0a0a;
     padding: 20px 0px;
     width: 100%;
     text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
+    nav {
+        backdrop-filter: none;
+        background-color: #111;
+        z-index: 9;
+    }
+
     .logo, .navbar {
         margin: 0 10px;
         padding: 0;
@@ -252,6 +272,10 @@ main {
 
     .navbar {
         display: none;
+    }
+
+    header {
+        background-size: cover;
     }
 
     .toggleSidebar {
@@ -270,6 +294,17 @@ main {
     .header-main h1 {
         font-size: 3rem;
         color: white;
+    }
+
+    main {
+        padding: 10px;
+        text-align: center;
+    }
+    
+    .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .footer-bio {
