--- a/contact/style.css
+++ b/contact/style.css
@@ -21,6 +21,8 @@ nav {
     position: fixed;
     width: 100vw;
     transition: top 0.6s;
+    border-bottom: 1px solid rgba(208, 208, 208, 0.196);
+    z-index: 10;
 }
 
 .logo, .navbar {
@@ -61,7 +63,7 @@ nav {
     transition: all .5s ease;
 }
 
-#contact {
+#contact, #contact-side {
     background-color: #ffffff;
     color: black;
 }
@@ -91,6 +93,7 @@ nav {
     transition: left 0.3s ease;
     overflow: hidden;
     z-index: 10;
+    border-right: 1px solid rgba(255, 255, 255, 0.359);
 }
 
 .sidebar-header {
@@ -150,7 +153,7 @@ header {
     color: white;
     background-color: #000f1a;
     background-image: url(../images/header.jpg);
-    background-size: cover;
+    background-size: 100vw 110%;
     background-position: center;
 }
 
@@ -171,17 +174,42 @@ h1 {
 }
 
 main {
-    background-color: rgb(0, 0, 0);
+    background-color: #212121;
     padding: 100px;
+    color: white;
+}
+
+.contact {
+    line-height: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+
+.contact1, .contact2, .contact3, .contact4 {
+    background-color: #333;
+    padding: 20px 2%;
+    border-radius: 10px;
+
+}
+
+.contact a {
+    line-height: 60px;
+    color: black;
+    text-decoration: none;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 7px;
 }
 
 .footer-bio {
     text-align: left;
-    background-color: #021526;
+    background-color: #111;
     color: white;
     padding: 30px 100px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgba(255, 255, 255, 0.249);
 }
 
 .footer-bio h3 {
@@ -225,13 +253,19 @@ main {
 
 .footer-copyright {
     color: white;
-    background-color: #021526;
+    background-color: #0a0a0a;
     padding: 20px 0px;
     width: 100%;
     text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
+    nav {
+        backdrop-filter: none;
+        background-color: #111;
+        z-index: 9;
+    }
+
     .logo, .navbar {
         margin: 0 10px;
         padding: 0;
