--- a/style.css
+++ b/style.css
@@ -299,22 +299,46 @@ main {
     margin: 20px;
 }
 
-.legend {
-    text-align: left;
-    position: absolute;
-    z-index: 10;
-    top: 235%;
-    left: 12%;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 10px;
-    border-radius: 5px;
-}
-
 figcaption {
     margin: 15px;
     margin-bottom: 40px;
     color: white;
     font-size: 1rem;
+}
+
+.call-btn {
+    position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color: red;
+	color:#222;
+	border-radius: 5rem;
+	text-align:center;
+    transition: 0.3s;
+    z-index: 0;
+}
+
+.call-btn a {
+    height: 60px;
+    width: 60px;
+    text-decoration: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+}
+
+.call-btn:hover {
+    background-color: red; /* A lighter red for hover */
+    transform: scale(1.05); /* Slightly enlarges the button */
+    box-shadow: 0 8px 15px rgba(255, 0, 0, 0.4);
+}
+
+#call {
+    font-size: 28px;
 }
 
 .footer-bio {
