--- a/style.css
+++ b/style.css
@@ -13,21 +13,25 @@
 }
 
 nav {
+    width: 100vw;
+}
+
+.navbar {
     background-color: transparent;
-    backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    width: 100vw;
-    transition: top 0.6s;
-    border-bottom: 1px solid rgba(208, 208, 208, 0.196);
+    top: 0;
+    width: 100%;
+    height: 7vh;
+    transition: top .5s ease;
+    /* border-bottom: 1px solid rgba(208, 208, 208, 0.196); */
     z-index: 10;
 }
 
-.logo, .navbar {
-    margin: 0px 1.5rem;
-    margin-right: 0px;
+.logo {
+    margin: 0 1.5rem;
 }
 
 .logo a {
@@ -42,24 +46,46 @@ nav {
     justify-content: center;
 }
 
-.navbar ul li {
+.navbar-items {
+    margin: 0 1.5rem;
+}
+
+.navbar-items ul li {
     display: flex;
     justify-content: center;
     align-items: center; 
 }
 
-.navbar ul li a {
+.navbar-items ul li a {
     text-decoration: none;
     color: white;
-    width: 7rem;
-    padding: 3vh 0;
+    width: 5rem;
+    margin: 3vh 1vh;
     text-align: center;
+    position: relative;
     transition: all .5s ease;
+    /* border: solid red; */
+}
+
+.navbar-items ul li a:after {    
+    content: "";
+    display: block;
+    height: 3px;
+    bottom: 0;
+    position: relative;
+    left: 50%;
+    background: #e6b606;
+    transition: width 0.3s ease, left 0.3s ease;
+    width: 0;
+}
+
+.navbar-items ul li a:hover:after { 
+    width: 100%; 
+    left: 0; 
 }
 
 .navbar ul li a:hover {
-    background-color: #ffffff;
-    color: black;
+    color: #e6b606;
     transition: all .5s ease;
 }
 
@@ -294,7 +320,7 @@ main {
     height: 600px;
 }
 
-.map h1 {
+.tracking-map h1 {
     color: white;
     margin: 20px;
 }
