logo homepage, fotoku, dan liat sendiri

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ nav {
     position: fixed;
     top: 0;
     left: -150px;
-    background-color: #021526;
+    background-color: #212121;
     transition: left 0.3s ease;
     overflow: hidden;
     z-index: 10;
@@ -118,7 +118,7 @@ nav {
 }
 
 .sidebar-header {
-    background-color: #021526;
+    background-color: #212121;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,7 +155,7 @@ nav {
 }
 
 .close-btn {
-    background-color: #021526;
+    background-color: #212121;
     color: white;
     border: hidden;
     font-size: 30px;
@@ -173,7 +173,7 @@ nav {
 header {
     color: white;
     height: 100vh;
-    background-color: #000f1a;
+    background-color: #212121;
     background-image: url(images/header.jpg);
     background-size: 110%;
     background-position: center;
@@ -426,7 +426,7 @@ figcaption {
 
 @media only screen and (max-width: 768px) {
     nav {
-        backdrop-filter: none;
+
         background-color: #111;
         z-index: 9;
     }
@@ -438,13 +438,15 @@ figcaption {
     }
 
     .logo {
+        display: block;
         padding: 10px;
         font-size: 20px;
         margin: auto;
         text-align: center;
+        
     }
 
-    .navbar {
+    .navbar-items {
         display: none;
     }
 
@@ -454,6 +456,7 @@ figcaption {
 
     .toggleSidebar {
         display: block;
+        z-index: 10;
     }
 
     .sidebar {
