--- a/contact/style.css
+++ b/contact/style.css
@@ -26,8 +26,14 @@ nav {
     width: 100%;
     height: 7vh;
     transition: top .5s ease;
-    /* border-bottom: 1px solid rgba(208, 208, 208, 0.196); */
     z-index: 10;
+}
+
+.navbar-group {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    margin: 0;
 }
 
 .logo {
@@ -64,7 +70,6 @@ nav {
     text-align: center;
     position: relative;
     transition: all .5s ease;
-    /* border: solid red; */
 }
 
 .navbar-items ul li a:after {    
@@ -74,7 +79,7 @@ nav {
     bottom: 0;
     position: relative;
     left: 50%;
-    background: #f9d502;
+    background: #e6b606;
     transition: width 0.3s ease, left 0.3s ease;
     width: 0;
 }
@@ -85,27 +90,20 @@ nav {
 }
 
 .navbar ul li a:hover {
-    color: #f9d502;
+    color: #e6b606;
     transition: all .5s ease;
 }
 
-#contact-side {
-    background-color: #ffffff;
-    color: black;
-}
-
 .toggleSidebar {
-    display: none;
-    padding: 0 5px;
+    padding: 0;
     font-size: 24px;
     background-color: transparent;
     color: white;
     border: none;
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    cursor: pointer;  /* Add spacing between logo and toggle button */
     z-index: 9;
+    position: relative;
+    display: none; /* Relative positioning inside the flex container */
 }
 
 .sidebar {
@@ -167,6 +165,11 @@ nav {
     cursor: pointer;
 }
 
+#contact-side {
+    background-color: #e6b606;
+    color: black;
+}
+
 .main-header {
     height: 50vh;
     display: flex;
@@ -201,7 +204,7 @@ h1 {
 
 main {
     background-color: #212121;
-    padding: 100px;
+    padding: 50px;
     color: white;
 }
 
@@ -210,15 +213,15 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 25px;
-    justify-content: space-between;
+    gap: 20px;
+    width: 100%;
 }
 
 .contact-container {
     background-color: #333;
-    padding: 20px 2%;
+    padding: 15px 15px;
     border-radius: 10px;
-    width: 45%;
+    width: 47%;
 }
 
 .contact a {
@@ -256,6 +259,7 @@ main {
 .contact5 {
     background: linear-gradient(45deg, #2196f3, #4caf50);
     width: 100%;
+    margin: 0 3px;
 }
 
 .footer-bio {
@@ -317,32 +321,34 @@ main {
 
 @media only screen and (max-width: 768px) {
     nav {
-        backdrop-filter: none;
         background-color: #111;
         z-index: 9;
     }
 
     .logo, .navbar {
-        margin: 0 10px;
+        margin: 0 15px;
         padding: 0;
         font-size: 12px;
     }
 
+    .navbar-group a {
+        font-size: 18px;
+    }
+
     .logo {
+        display: block;
         padding: 10px;
-        font-size: 20px;
-        margin: auto;
+        margin: 0 20vw;
         text-align: center;
     }
 
-    .navbar {
+    .navbar-items {
         display: none;
     }
 
     .toggleSidebar {
-        display: flex;
-        top: 5px;
-        left: 5px;
+        display: block;
+        z-index: 10;
     }
 
     .sidebar {
@@ -365,17 +371,21 @@ main {
 
     .contact {
         flex-direction: column;
-        width: 90%;
+        width: 96.5%;
         padding: 15px;
         margin: 20px 0;
     }
     
     .contact-container {
-        width: 99%;
+        width: 88%;
     }
 
     .contact-container p {
         width: 100%;
+    }
+
+    .contact5 {
+        margin: 0;
     }
 
     .footer-bio {
