--- a/style.css
+++ b/style.css
@@ -24,10 +24,16 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 7vh;
+    height: 13vh;
     transition: top .5s ease;
-    /* border-bottom: 1px solid rgba(208, 208, 208, 0.196); */
     z-index: 10;
+}
+
+.navbar-group {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    margin: 0;
 }
 
 .logo {
@@ -64,7 +70,6 @@ nav {
     text-align: center;
     position: relative;
     transition: all .5s ease;
-    /* border: solid red; */
 }
 
 .navbar-items ul li a:after {    
@@ -90,17 +95,15 @@ nav {
 }
 
 .toggleSidebar {
-    display: none;
-    padding: 0 5px;
+    padding: 0;
     font-size: 24px;
     background-color: transparent;
     color: white;
     border: none;
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    cursor: pointer;  /* Add spacing between logo and toggle button */
     z-index: 9;
+    position: relative;
+    display: none; /* Relative positioning inside the flex container */
 }
 
 .sidebar {
@@ -163,7 +166,7 @@ nav {
 }
 
 .main-header {
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -175,7 +178,7 @@ header {
     height: 100vh;
     background-color: #212121;
     background-image: url(images/header.jpg);
-    background-size: 110%;
+    background-size: cover;
     background-position: center;
 }
 
@@ -426,32 +429,29 @@ figcaption {
 
 @media only screen and (max-width: 768px) {
     nav {
-
         background-color: #111;
         z-index: 9;
     }
 
     .logo, .navbar {
-        margin: 0 10px;
+        margin: 0 15px;
         padding: 0;
         font-size: 12px;
+    }
+
+    .navbar-group a {
+        font-size: 18px;
     }
 
     .logo {
         display: block;
         padding: 10px;
-        font-size: 20px;
-        margin: auto;
+        margin: 0 20vw;
         text-align: center;
-        
     }
 
     .navbar-items {
         display: none;
-    }
-
-    header {
-        background-size: cover;
     }
 
     .toggleSidebar {
@@ -476,6 +476,10 @@ figcaption {
 
     .header-main p {
         font-size: 0.9rem;
+    }
+
+    header {
+        background-size: 100vw 110%;
     }
 
     .animation-arrow-down {
